# gridding_method_minimal_oversampling

./: .gitignore  setup.cfg  setup.py
common/: my_image_display.py  my_image_io.py  my_image_process.py
examples/: fwd_bwd_proj.py  scipy_linop.py
gridrec/: __init__.py  _filters.c  _filters.h  _gridrec.pyx  _gridrec_backproj.c  _gridrec_fwdproj.c  compile.py  create_gridrec_v4_module.py  gridding_lut.py  lut.py  proj.py
scripts/: backproj.py  class_projectors_grid.py  forwproj.py  run_all_tests.py  utils.py
