[metadata]
name = gridrec
version = 0.1
description = Gridding Projectors with Minimal Oversampling
long_description = file: README.md
long_description_content_type = text/markdown
author = Filippo Arcadu
# author_email = Unknown
# license = Unknown
# license_file = LICENSE
url = https://github.com/arcaduf/gridding_method_minimal_oversampling
download_url = https://github.com/kohr-h/gridding_method_minimal_oversampling/archive/master.zip
platforms = Linux, Unix
keywords = research, development, mathematics, tomography
# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Multimedia :: Sound/Audio :: Analysis

#    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
install_requires =
    setuptools >=39.2.0
    numpy >=1.11
build_requires =
    cython >=0.26
    numpy >=1.11
zip_safe = False
